test/libhyperion/syntaxTests/inlineAssembly/assembly_empty_option_list_dialect.hyp
function f() pure {
    assembly "zvmasm" () {}
}
// ----
// ParserError 2314: (43-44): Expected 'StringLiteral' but got ')'
